--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
+    "start:dev": "cross-env NODE_ENV=test node app.js",
+    "start:uat": "cross-env NODE_ENV=development node app.js",
+    "start:prod": "cross-env NODE_ENV=production node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "horan",
@@ -15,11 +18,12 @@
     "@fastify/swagger-ui": "^1.9.3",
     "axios": "^1.6.2",
     "boom": "^7.3.0",
+    "dayjs": "^1.11.10",
     "fastify": "^4.21.0",
     "fastify-cron": "^1.3.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "stream-to-promise": "3.0.0",
-    "superagent": "^8.0.9"
+    "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
