--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "js-yaml": "^4.1.0",
+    "js-yaml-loader": "^1.2.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
