--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@fastify/swagger-ui": "^1.9.3",
     "axios": "^1.6.2",
     "boom": "^7.3.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "fastify": "^4.21.0",
     "fastify-cron": "^1.3.1",
