--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "dayjs": "^1.11.10",
     "fastify": "^4.21.0",
     "fastify-cron": "^1.3.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
