增加docker 等制作镜像

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /servers
 
 COPY . .
 
-RUN npm i --registry=https://registry.npm.taobao.org
+# RUN npm i --registry=https://registry.npm.taobao.org
 
-EXPOSE 7788
+EXPOSE 7789
 
 CMD ["npm", "run", "start"]
